Fix color in html

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       margin: 4px 2px;
       cursor: pointer
     }
-    .btn2 {background-color: #008CBA;} /* Blue */
-    .btn3 {background-color: #f44336;} /* Red */ 
-    .btn4 {background-color: #e7e7e7; color: black;} /* Gray */ 
-    .btn5 {background-color: #555555;} /* Black */
+    .btn2 {background-color: #008CB6;} /* Blue */
+    .btn3 {background-color: #f44333;} /* Red */ 
+    .btn4 {background-color: #e7e7e9; color: black;} /* Gray */ 
+    .btn5 {background-color: #555550;} /* Black */
 
     p {
       font-size: 28px;
