--- a/index.html
+++ b/index.html
@@ -1,65 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<title>Change the Background Color & TextColor Dynamically with JavaScript</title>
-  <style>
-    .btn {
-      background-color: #4CAF50; /* Green */
-      border: none;
-      color: white;
-      padding: 15px 25px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      margin: 4px 2px;
-      cursor: pointer
-    }
-    .btn2 {background-color: #008CB6;} /* Blue */
-    .btn3 {background-color: #f44333;} /* Red */ 
-    .btn4 {background-color: #e7e7e9; color: black;} /* Gray */ 
-    .btn5 {background-color: #555550;} /* Black */
-
-    p {
-      font-size: 28px;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-  
-    <div>
-      <h1>Select the color for the background</h1>
-        <button type="button" onclick="changeBodyBg('green');" class="btn btn1">Green</button>
-        <button type="button" onclick="changeBodyBg('blue');" class="btn btn2">Blue</button>
-        <button type="button" onclick="changeBodyBg('red');" class="btn btn3">Red</button>
-        <button type="button" onclick="changeBodyBg('gray');" class="btn btn4">Gray</button>
-        <button type="button" onclick="changeBodyBg('black');" class="btn btn5">Black</button>
-    </div>
-    
-    <div>
-      <h1>Select the color for text</h1>
-
-      <button type="button" onclick="changeFontColor('green');" class="btn btn1">Green</button>
-      <button type="button" onclick="changeFontColor('blue');" class="btn btn2">Blue</button>
-      <button type="button" onclick="changeFontColor('red');" class="btn btn3">Red</button>
-      <button type="button" onclick="changeFontColor('gray');" class="btn btn4">Gray</button>
-      <button type="button" onclick="changeFontColor('black');" class="btn btn5">Black</button>
-    </div>
-    <p id="fontColor">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo maiores soluta placeat tempora iure quibusdam eos repudiandae, adipisci magnam et ex dolorem autem delectus minus illo quo error rem, laudantium assumenda repellendus perferendis tenetur! Illo distinctio odit optio, earum aliquid tempora deserunt! Veritatis eveniet ea eius. Optio minus accusamus accusantium voluptatem dolore corporis eius cum aut qui beatae odit laborum aspernatur neque sed quasi fugit quis perspiciatis dicta soluta, doloremque iste quidem eum. Laborum corporis odio voluptates quos quam recusandae autem aperiam exercitationem amet, qui veritatis ad commodi doloribus ducimus tenetur saepe quaerat accusantium distinctio ea magnam? Pariatur, et doloremque.
-    </p>
-</body>
-
-<script>
-  // Function to change webpage background color
-  function changeBodyBg(color){
-      document.body.style.background = color;
-  }
-  
-  // Function to change heading background color
-  function changeFontColor(color){
-      document.getElementById("fontColor").style.color = color;
-  }
-</script>
-</html>                            
+<!-- Unused -->
